--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -35,7 +35,7 @@ body {
 
 .button {
     display: inline-block;
-    padding: 0.6rem 1rem;
+    padding: 1rem 1rem;
     border-radius: 0.4rem;
     text-decoration: none;
     font-weight: bold;
@@ -45,12 +45,9 @@ body {
     font-size: 1rem;
     cursor: pointer;
     text-align: center;
+    
 }
 
-a {
-    text-decoration: none;
-    display: inline-block;
-}
 
 li {
     list-style-type: none;
@@ -60,16 +57,15 @@ li {
     color: red;
 }
 
-.img {
+/* .img {
     width: 15rem;
     position: relative;
     overflow: hidden;
     padding: 0rem;
-}
+} */
 
 img {
     display: block;
-    position: absolute;
     left: 0;
     right: 0;
     width: 100%;
@@ -136,10 +132,12 @@ img.hearts {
 div.actions {
     display: flex;
     justify-content: center;
+    align-items: center;
+
 }
-div.actions a {
-    margin-right: 10px;
-    height: 25px;
+div.actions > button {
+    margin-right: 1.5rem;
+
 }
 
 .deletePet>form,
