--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -89,6 +89,25 @@ textarea#description {
 .message {
     text-align: center;
     margin: 100px;
-    font-size: 50px;
+    font-size: 35px;
     color: #9999ff
+}
+
+.disabled-link {
+    pointer-events: none;
+ }
+
+.not-found{
+    display: block;
+    margin: auto;
+    width: 30%;
+    height: 420px;
+}   
+
+#wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 550px;
+
 }
